test/sema/struct_non_existent_member_initialized.dmz
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
struct Color {
  r: i32,
  g: i32,
  b: i32,
}

fn main() -> void {
  let x = Color {
    r: 0,
    rgba: 1,
    // CHECK: [[# @LINE - 1 ]]:5: error: 'Color' has no field named 'rgba'
    g: 2,
    b: 3,
    a: 4,
    // CHECK: [[# @LINE - 1 ]]:5: error: 'Color' has no field named 'a'
  };
}
